Fix pagination width on small screen

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -164,6 +164,7 @@ body {
   bottom: 0;
   left: 50%;
   transform: translate(-50%,0);
+  width: 100%;
 }
 
 .pagination {
